--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,34 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="textview">TextView</string>
+    <string name="textview2">TextView</string>
+    <string name="button">Button</string>
+    <string name="interested">Interested?</string>
+    <string name="textview3">TextView</string>
+    <string name="login">Login</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="login2">Login</string>
+    <string name="not_registered_signup_here">Not Registered? Signup here.</string>
+    <string name="welcome_to_mdb_socials">Welcome to MDB Socials!</string>
+    <string name="login3">Login</string>
+    <string name="register">Register</string>
+    <string name="name_of_event">Name of Event</string>
+    <string name="description">Description</string>
+    <string name="upload_a_picture">Upload a Picture</string>
+    <string name="date">Date</string>
+    <string name="post">Post</string>
+    <string name="full_name">Full Name</string>
+    <string name="update_your_profile">Update Your Profile</string>
+    <string name="save">Save</string>
+    <string name="signup">Signup</string>
+    <string name="email2">Email</string>
+    <string name="password2">Password</string>
+    <string name="register2">Register</string>
+    <string name="textview4">TextView</string>
+    <string name="textview5">TextView</string>
+    <string name="textview6">TextView</string>
 
     <string-array name="spinner_list_item_array">
         <item>Update Profile</item>
